--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,32 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\User:
+            algorithm: auto
     providers:
-        users_in_memory: { memory: null }
+        in_memory: { memory: null }
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: in_database
+
+            form_login:
+                login_path: loginUser
+                check_path: loginUser
+                # Paramètre pour se connecter sur le site:
+                username_parameter: _email
+                # Sécuriser le formulaire contre les attaques CSRF:
+                csrf_token_generator: security.csrf.token_manager
+                # Page où redidiriger l'utilisateur après s'être correctement connecté:
+                default_target_path: home
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
